<resources>
    <string name="app_name">Stepz</string>
    <string name="google_api_key">AIzaSyDQlbQN3jOmeUywMp4utk43RpsW4ucKdyc</string>
    <string name="startButton">start</string>
    <string name="continueButton">continue</string>
    <string name="saveButton">save</string>
    <string name="stopButton">stop</string>
    <string name="itemRoutes">Saved routes</string>
    <string name="itemBluetooth">Connected devices</string>
    <string name="tvRoutes">SAVED ROUTES</string>
    <string name="connectedDevices">Connected devices:</string>
</resources>
